force-app/main/default/objects/IntegracionSF__c/IntegracionSF__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración encargada de guardar los datos necesarios para poder obtener el token de la instacia de SF y de esta manera poder conectarnos con la misma instancia</description>
    <label>IntegracionSF</label>
</CustomObject>