force-app/main/default/objects/IntegracionSF__c/fields/clientid__c.field-meta.xml
<CustomField>
    <fullName>clientid__c</fullName>
    <description>Clave pública de la aplicación conectada</description>
    <label>client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>