force-app/main/default/objects/IntegracionSF__c/fields/clientsecret__c.field-meta.xml
<CustomField>
    <fullName>clientsecret__c</fullName>
    <description>Clave privada de la aplicación conectada</description>
    <label>client_secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>