force-app/main/default/objects/IntegracionSF__c/fields/password__c.field-meta.xml
<CustomField>
    <fullName>password__c</fullName>
    <description>Contraseña del usuario indicado</description>
    <label>password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>