force-app/main/default/objects/IntegracionSF__c/fields/UrlEndPoint__c.field-meta.xml
<CustomField>
    <fullName>UrlEndPoint__c</fullName>
    <label>UrlEndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>