force-app/main/default/objects/IntegracionSF__c/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <description>Nombre de usuario de un usuario de SF</description>
    <label>username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>