force-app/main/default/objects/IntegracionSF__c/fields/UsuarioIntegracionId__c.field-meta.xml
<CustomField>
    <fullName>UsuarioIntegracionId__c</fullName>
    <description>Identificador del usuario de integración de arriaga para controlar cambios que haga</description>
    <label>Usuario Integración Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>